--- a/exchangerates.html
+++ b/exchangerates.html
@@ -1,9 +1,9 @@
 <html>
-<body>
+<head>
 </head>
 <body>
 
-<!-- START CODE Attention! Do not modify this code; --><script>var fm = "EUR";var to = "GBP,EUR,AED";var tz = "timezone";var sz = "1x201";var lg = "en";var st = "primary";var cd = 0;var am = 100</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
+ <!-- START CODE Attention! Do not modify this code; --><script>var fm = "EUR";var to = "GBP,EUR,USD,AED";var tz = "timezone";var sz = "1x238";var lg = "en";var st = "primary";var cd = 0;var am = 100</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
 
 </body>
 <html>
